--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
   "homepage": "https://github.com/Megan0145/SarahSeq-BE#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
-    "knex": "^0.19.2",
-    "sqlite3": "^4.1.0",
-    "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
-    "bcryptjs": "^2.4.3"
+    "knex": "^0.19.2",
+    "pg": "^7.14.0",
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
